/*
 * $Id: ChangeLog,v 1.989 2003/04/26 16:26:07 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-04-26 17:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed hb_vmSend() to auto convert hb___msgGetData() to hb___msgSetData if [1] paramater passed.
      Clipper compabtibility.

2003-04-26 13:25 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/radiogrp.prg
    ! Fixed an Bug on Select method
      Minor Formatting
  * source/rtl/ListBox.prg
    ! Fixed problem when an caption is passed
      Minor Formatting

2003-04-26 01:02 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/thread.c
    ! Added some declaration in thread.c and function headers in
      thread.h to fix compilation warning and errors.
       - Work in progress here -

2003-04-25 09:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    * Replace REPLICATE() for SPACE().

2003-04-25 07:40 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/tbrowse.prg
    *removed unnecessary * (lines 1800,1802,2165,2167)

2003-04-24 17:15 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  + include/hbtypes.h
    Added  missing include necessary to build pcode dll with xharbour
  * source/vm/maindllp.h
    * minor fix to one function declaration

2003-04-24 11:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    ! Fix display when ::Freeze equal to ::ColCount
      Reported by Gianluca Piemonte.

2003-04-22 15:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Removed logic of "eating" '\' in strotrim() and replaced with adding '\' as '[' prefix.

2003-04-22 16:00 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/hbrpc.ch
    + Added server status macros

  * source/rtl/trpc.prg